Env fixed, domain & subdomains crawler
